fixed padding in the footer and replaced with grid gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,6 @@ footer p {
   font-weight: 300;
   line-height: 24px;
   opacity: 0.9;
-  margin-right: 20px;
 }
 footer ul {
   padding: 0;
@@ -106,6 +105,7 @@ section {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 60px;
 }
 
 @media (max-width: 960px) {
